[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imabari3dcad"
version = "0.1.0"
description = "3D CAD application with graph RAG capabilities"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # 主要な依存関係
    "llama-index>=0.12.52",
    "llama-index-agent-openai>=0.4.12",
    "llama-index-embeddings-openai>=0.3.1",
    "llama-index-llms-openai>=0.4.7",
    "llama-index-readers-file>=0.4.11",
    "llama-index-readers-llama-parse>=0.4.0",
    "llama-index-workflows>=1.2.0",
    "openai>=1.97.1",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "numpy>=2.2.6",
    "pyvis>=0.3.2",
    "python-dotenv>=1.1.1",
    "aiohttp>=3.12.14",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "langchain-community>=0.3.27",
    "neo4j>=5.28.1",
    "langchain-openai>=0.3.28",
    "llama-index-graph-stores-neo4j>=0.4.6",
    "tree-sitter-python>=0.23.6",
    "ipykernel>=6.30.0",
    "tree-sitter>=0.25.0",
    "ezdxf>=1.4.2",
    "ruff>=0.12.8",
    "flake8>=7.3.0",
    "sentence-transformers>=5.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "data*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"] 
